guestbook/guestbook-ui-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: guestbook-ui
spec:
  host: https://guestbook-ui-dc2-tools.isdc20-0ce42e8480356580312b8efcc5f21aad-0001.us-south.containers.appdomain.cloud/
  to:
    kind: Service
    name: guestbook-ui
