guestbook/route.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
   name: guestbook-ui
spec:
  rules:
  - host:  guestbook-ui-dc2-tools.isdc20-0ce42e8480356580312b8efcc5f21aad-0001.us-south.containers.appdomain.cloud
    http:
      paths:
      - path: /
        backend:
        serviceName: guestbook-ui
        servicePort: 80
